--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = docker
 	url = git@gist.github.com:db66c3d6bdf06aba91c37e507e37b85e.git
 	branch = master
+[submodule "css"]
+	path = css
+	url = git@gist.github.com:e9981ad21357190446d643d317eade45.git
+	branch = master
