--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = css
 	url = git@gist.github.com:e9981ad21357190446d643d317eade45.git
 	branch = master
+[submodule "html_css"]
+	path = html_css
+	url = git@gist.github.com:e9981ad21357190446d643d317eade45.git
+	branch = master
