add unix gist, python_install file

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = html_css
 	url = git@gist.github.com:e9981ad21357190446d643d317eade45.git
 	branch = master
+[submodule "unix"]
+	path = unix
+	url = git@gist.github.com:4f9529fe9d0119b515d8531128eec5a4.git
+	branch = master
